--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ video {
 /* Style the canvas with a subtle light background */
 canvas {
     position: absolute;
-   
+    width: 100%;
+    height: 100%;
     background-color: rgba(240, 240, 240, 0.3); /* Subtle light gray with transparency */
     z-index: 10;
 }
